// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vue-clip can mount "destroyed" VueClip component 1`] = `
<div id="app">
	<div class="SharpUpload SharpUpload--empty">
		<div class="">
			<button class="SharpButton btn SharpUpload__browse dz-message btn-text btn-block" type="button">
				{{ form.upload.browse_button }}
			</button>
			<div class="clip-preview-template" style="display: none;">
				<div></div>
			</div>
		</div>
		<!---->
		<!---->
		<a style="display: none;"></a>
	</div>
</div>
`;

exports[`vue-clip can mount "in progress" VueClip component 1`] = `
<div id="app">
	<div class="SharpUpload">
		<div class="dz-clickable">
			<div class="card card-body SharpUpload__card">
				<div class="">
					<!---->
					<div class="SharpUpload__infos">
						<div class="mb-3">
							<label class="SharpUpload__filename text-truncate d-block">Fichier.pdf</label>
							<div class="SharpUpload__info mt-2">
								<div class="row g-2">
									<div class="col-auto">14.65 KB</div>
									<!---->
								</div>
							</div>
							<div class="SharpUpload__progress mt-2">
								<div role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" class="SharpUpload__progress-bar" style="width: 50%;"></div>
							</div>
						</div>
						<div>
							<!---->
							<button class="SharpButton btn SharpUpload__remove-button btn-outline-danger btn-sm">
								{{ form.upload.remove_button }}
							</button>
						</div>
					</div>
				</div>
			</div>
			<div class="clip-preview-template" style="display: none;">
				<div></div>
			</div>
		</div>
		<!---->
		<!---->
		<a style="display: none;"></a>
	</div>
</div>
<input type="file" class="dz-hidden-input" style="visibility: hidden; position: absolute; top: 0px; left: 0px; height: 0px; width: 0px;">
`;

exports[`vue-clip can mount VueClip component 1`] = `
<div id="app">
	<div class="SharpUpload SharpUpload--empty">
		<div class="dz-clickable">
			<button class="SharpButton btn SharpUpload__browse dz-message btn-text btn-block" type="button">
				{{ form.upload.browse_button }}
			</button>
			<div class="clip-preview-template" style="display: none;">
				<div></div>
			</div>
		</div>
		<!---->
		<!---->
		<a style="display: none;"></a>
	</div>
</div>
<input type="file" class="dz-hidden-input" style="visibility: hidden; position: absolute; top: 0px; left: 0px; height: 0px; width: 0px;">
`;

exports[`vue-clip can mount initially image VueClip component 1`] = `
<div id="app">
	<div class="SharpUpload">
		<div class="dz-clickable">
			<div class="card card-body SharpUpload__card">
				<div class="row">
					<div class="SharpUpload__thumbnail col-4 col-md-4">
						<img src="/image.jpg" alt="">
					</div>
					<div class="SharpUpload__infos col-8 col-md-8">
						<div class="mb-3">
							<label class="SharpUpload__filename text-truncate d-block">Image.jpg</label>
							<div class="SharpUpload__info mt-2">
								<div class="row g-2">
									<div class="col-auto">14.65 KB</div>
									<div class="col-auto">
										<a href="/sharp/api/form/download/my_upload/entityKey/instanceId?fileName=Image.jpg" download="Image.jpg" class="SharpUpload__download-link">
											<i class="fas fa-download"></i>
											{{ form.upload.download_link }}
										</a>
									</div>
								</div>
							</div>
							<!---->
						</div>
						<div>
							<button class="SharpButton btn btn-outline-primary btn-sm">
								{{ form.upload.edit_button }}
							</button>
							<button class="SharpButton btn SharpUpload__remove-button btn-outline-danger btn-sm">
								{{ form.upload.remove_button }}
							</button>
						</div>
					</div>
				</div>
			</div>
			<div class="clip-preview-template" style="display: none;">
				<div></div>
			</div>
		</div>
		<!---->
		<!---->
		<a style="display: none;"></a>
	</div>
</div>
<input type="file" class="dz-hidden-input" style="visibility: hidden; position: absolute; top: 0px; left: 0px; height: 0px; width: 0px;">
`;

exports[`vue-clip can mount initially non image VueClip component 1`] = `
<div id="app">
	<div class="SharpUpload">
		<div class="dz-clickable">
			<div class="card card-body SharpUpload__card">
				<div class="">
					<!---->
					<div class="SharpUpload__infos">
						<div class="mb-3">
							<label class="SharpUpload__filename text-truncate d-block">Fichier.pdf</label>
							<div class="SharpUpload__info mt-2">
								<div class="row g-2">
									<div class="col-auto">14.65 KB</div>
									<div class="col-auto">
										<a href="/sharp/api/form/download/my_upload/entityKey/instanceId?fileName=Fichier.pdf" download="Fichier.pdf" class="SharpUpload__download-link">
											<i class="fas fa-download"></i>
											{{ form.upload.download_link }}
										</a>
									</div>
								</div>
							</div>
							<!---->
						</div>
						<div>
							<!---->
							<button class="SharpButton btn SharpUpload__remove-button btn-outline-danger btn-sm">
								{{ form.upload.remove_button }}
							</button>
						</div>
					</div>
				</div>
			</div>
			<div class="clip-preview-template" style="display: none;">
				<div></div>
			</div>
		</div>
		<!---->
		<!---->
		<a style="display: none;"></a>
	</div>
</div>
<input type="file" class="dz-hidden-input" style="visibility: hidden; position: absolute; top: 0px; left: 0px; height: 0px; width: 0px;">
`;

exports[`vue-clip can mount non croppable image 1`] = `
<div id="app">
	<div class="SharpUpload">
		<div class="dz-clickable">
			<div class="card card-body SharpUpload__card">
				<div class="row">
					<div class="SharpUpload__thumbnail col-4 col-md-4">
						<img src="/image.jpg" alt="">
					</div>
					<div class="SharpUpload__infos col-8 col-md-8">
						<div class="mb-3">
							<label class="SharpUpload__filename text-truncate d-block">Image.jpg</label>
							<div class="SharpUpload__info mt-2">
								<div class="row g-2">
									<div class="col-auto">14.65 KB</div>
									<div class="col-auto">
										<a href="/sharp/api/form/download/my_upload/entityKey/instanceId?fileName=Image.jpg" download="Image.jpg" class="SharpUpload__download-link">
											<i class="fas fa-download"></i>
											{{ form.upload.download_link }}
										</a>
									</div>
								</div>
							</div>
							<!---->
						</div>
						<div>
							<!---->
							<button class="SharpButton btn SharpUpload__remove-button btn-outline-danger btn-sm">
								{{ form.upload.remove_button }}
							</button>
						</div>
					</div>
				</div>
			</div>
			<div class="clip-preview-template" style="display: none;">
				<div></div>
			</div>
		</div>
		<!---->
		<!---->
		<a style="display: none;"></a>
	</div>
</div>
<input type="file" class="dz-hidden-input" style="visibility: hidden; position: absolute; top: 0px; left: 0px; height: 0px; width: 0px;">
`;

exports[`vue-clip can mount non transformable image 1`] = `
<div id="app">
	<div class="SharpUpload">
		<div class="dz-clickable">
			<div class="card card-body SharpUpload__card">
				<div class="row">
					<div class="SharpUpload__thumbnail col-4 col-md-4">
						<img src="/image.jpg" alt="">
					</div>
					<div class="SharpUpload__infos col-8 col-md-8">
						<div class="mb-3">
							<label class="SharpUpload__filename text-truncate d-block">Image.jpg</label>
							<div class="SharpUpload__info mt-2">
								<div class="row g-2">
									<div class="col-auto">14.65 KB</div>
									<div class="col-auto">
										<a href="/sharp/api/form/download/my_upload/entityKey/instanceId?fileName=Image.jpg" download="Image.jpg" class="SharpUpload__download-link">
											<i class="fas fa-download"></i>
											{{ form.upload.download_link }}
										</a>
									</div>
								</div>
							</div>
							<!---->
						</div>
						<div>
							<!---->
							<button class="SharpButton btn SharpUpload__remove-button btn-outline-danger btn-sm">
								{{ form.upload.remove_button }}
							</button>
						</div>
					</div>
				</div>
			</div>
			<div class="clip-preview-template" style="display: none;">
				<div></div>
			</div>
		</div>
		<!---->
		<!---->
		<a style="display: none;"></a>
	</div>
</div>
<input type="file" class="dz-hidden-input" style="visibility: hidden; position: absolute; top: 0px; left: 0px; height: 0px; width: 0px;">
`;

exports[`vue-clip can mount read-only VueClip component 1`] = `
<div id="app">
	<div class="SharpUpload SharpUpload--empty SharpUpload--disabled">
		<div class="dz-clickable">
			<button class="SharpButton btn SharpUpload__browse dz-message btn-text btn-block" disabled="disabled" type="button">
				{{ form.upload.browse_button }}
			</button>
			<div class="clip-preview-template" style="display: none;">
				<div></div>
			</div>
		</div>
		<!---->
		<!---->
		<a style="display: none;"></a>
	</div>
</div>
<input type="file" class="dz-hidden-input" style="visibility: hidden; position: absolute; top: 0px; left: 0px; height: 0px; width: 0px;">
`;
